# GamersPlane

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  compose.dev.yml  compose.email.yml  compose.sh  compose.yml  docker-compose.dev.yml  docker-compose.pgadmin.yml  docker-compose.yml  gamers_plane.code-workspace  package-lock.json
api/: .isort.cfg  .pre-commit-config.yaml  Dockerfile  Pipfile  alembic.ini  alembic.sh  entrypoint.sh  pyproject.toml  update-packages.sh
api/alembic/: env.py
api/alembic/versions/: 10e635c60218_initial_tables.py  31749ad6cc3c_initial_tables.py  7b73b809a63b_initial_tables.py  8c9420c80f3c_create_users_user_meta_permissions_roles_and_tokens_models.py  d8c937b61f95_initial_tables.py
api/scripts/: clear_db.py  populate_db.py  refresh_db.sh
api/src/: app.py  database.py  django_apps.py  django_conf.py  envs.py  exceptions.py  fields.py  globals.py  middleware.py
api/src/alembic/: env.py
api/src/app/: app.py  configs.py  database.py  envs.py  exceptions.py  main.py  middleware.py  model.py  schema_base.py  schemas.py  util.py
api/src/auth/: functions.py  routes.py  schemas.py
api/src/authorization/: functions.py  routes.py  schemas.py
api/src/characters/: routes.py
api/src/common/: cache.py  decorators.py  email.py  functions.py
api/src/forums/: forums_routes.py  functions.py  schemas.py  threads_routes.py
api/src/games/: routes.py
api/src/helpers/: cache.py  decorators.py  email.py  functions.py
api/src/models/: __init__.py  base.py  character.py  forum.py  forum_group.py  game.py  game_allowed_systems.py  genre.py  permission.py  publisher.py  referral_link.py  role.py  role_permission.py  system.py  system_genres.py  token.py  types.py  user.py  user_meta.py  user_roles.py
api/src/permissions/: functions.py  permissions_routes.py  roles_routes.py  schemas.py
api/src/referral_links/: routes.py  schemas.py
api/src/repositories/: user_repository.py
api/src/scripts/: populate_db.py  refresh_db.sh
api/src/systems/: routes.py  schemas.py
api/src/tests/: conftest.py
api/src/tools/: routes.py
api/tests/: django_test_conf.py  generators.py
cli/: main.py  pyproject.toml
cli/data/: referral_links.json
docker/: manage  (+3 more)
(+208 files in other folders)
