[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "alembic~=1.16.0",
    "asyncpg~=0.30",
    "bcrypt~=4.3",
    "email-validator~=2.2",
    "fastapi~=0.115",
    "inflect~=7.5",
    "jinja2~=3.1",
    "psycopg[binary,pool]~=3.2",
    "pyjwt[crypto]~=2.9",
    "python-dotenv~=1.1",
    "sqlalchemy~=2.0",
    "typing-extensions~=4.13",
    "uvicorn[standard]~=0.34",
]

[tool.uv]
dev-dependencies = [
    "icecream~=2.1",
    "mimesis~=18.0",
    "pytest~=8.3",
    "pytest-factoryboy~=2.7",
    "pre-commit~=4.0",
    "ruff~=0.11",
]

[project.scripts]
api = "app:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
extend-exclude = [
    "**/alembic/env.py"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]

"**/tests/**" = [
    "F811",
]
