[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "api",
    "typer~=0.24",
]

[tool.uv.sources]
api = { path = "../api", editable = true }

[dependency-groups]
dev = [
    "icecream~=2.1",
    "mimesis~=18.0",
    "pytest~=8.4",
    "pytest-factoryboy~=2.8",
    "ruff~=0.15",
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]

"**/tests/**" = [
    "F811",
]
