[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "api",
    "mimesis~=19.0",
    "typer~=0.26",
]

[tool.uv.sources]
api = { path = "../api", editable = true }

[dependency-groups]
dev = [
    "icecream~=2.1",
    "pytest~=8.4",
    "pytest-factoryboy~=2.8",
    "ruff~=0.15",
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
]

"**/tests/**" = [
    "F811",
]
